# naturregnskap

./: CLAUDE.md  Hjartdøla.py  Naturregnskap.py  avstand fra inngrep.csv  avstand fra inngrep.xlsx  forvaltningsinteresse.csv  forvaltningsinteresse.xlsx  main.py  naturkvalitet.csv  naturkvalitet.xlsx  pyproject.toml  påvirkning.xlsx  tidsperspektiv.csv  tidsperspektiv.xlsx  vanskelighetsgrad.csv  vanskelighetsgrad.xlsx
Hjartdøla/: hjartdøla.csv
__marimo__/session/: Hjartdøla.py.json  Naturregnskap.py.json
beregningsark/: påvirkning.csv
