[project]
name = "naturregnskap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.64.0",
    "duckdb>=1.3.2",
    "marimo>=0.15.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "polars>=1.32.3",
    "pytest>=8.4.1",
    "sqlglot>=27.8.0",
]
